fix img-wrap and in index page; correct align-items end to flex-end

--- a/app/assets/style/_base.scss
+++ b/app/assets/style/_base.scss
@@ -90,10 +90,16 @@ a {
     justify-content: space-between;
 }
 
+.row-btw-baseline {
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+}
+
 .row-end {
     display: flex;
     justify-content: end;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .row-btw-center {
@@ -104,7 +110,7 @@ a {
 
 .row-start-bottom {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
 }
 
 .row-wrap {
